fix overflow

--- a/apps/sharefiles/static/sharefiles/css/folder.css
+++ b/apps/sharefiles/static/sharefiles/css/folder.css
@@ -14,11 +14,8 @@ body {
 main {
   padding: 20px 50px;
 }
-div :not(.w3-dropdown-content){
+div :not(li, .w3-dropdown-content){
   overflow: visible;
-}
-li {
-  overflow: hidden;
 }
 
 .folder * {
